--- a/index.html
+++ b/index.html
@@ -1,38 +1,73 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-  <title>GlockKnowledge</title>
+    <meta charset="UTF-8">
+    <title>Les Glock – Accueil</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section id="presentation"> 
-  <h1>L'art du Glock </h1>
-  <h2>Né en 1982 grace à Gaston Glock</h2>
-  
-  <img src="https://tse3.mm.bing.net/th/id/OIP.r3R16cxs-nnaYsNRzm-dlQHaEK?pid"=Api&P=0&h=180 alt="Texte de remplacement." width=500>
-  
-  <h4>Le Glock est une série de pistolets semi-automatiques (ou automatique pour le modèle 18 en 9 mm Parabellum), fabriqués en Autriche par la manufacture d'armes Glock GmbH.
 
-Les pistolets Glock sont devenus la gamme de produits la plus rentable de l'entreprise et équipent forces armées, de sécurité et de police d'au moins 48 pays. Les Glock sont également très appréciés des civils pour le tir récréatif, le tir sportif et l'autodéfense.</h4>
-  </section>
-  <br> Composants principaux d’un Glock :
+<header>
+    <h1>Les pistolets Glock</h1>
+    <nav>
+        <a href="page2.html">Glock 19</a>
+        <a href="page3.html">Glock 17</a>
+        
+    </nav>
+</header>
 
-<br>Carcasse (polymère, détente, sécurités internes)
+<div class="container">
+    <h2 id="ancre">Présentation générale</h2>
 
-<br>Culasse (percuteur, extracteur, organes de visée)
+    <p>
+        Glock est une entreprise autrichienne connue pour ses pistolets
+        semi-automatiques utilisés par les forces de l’ordre.
+    </p>
 
-<br>Canon
+    <img src="https://www.gunmarket.fr/38550-gunmarket_large/pistolet-glock-19-gen5-cal9x19-categorie-b.jpg" alt="Glock 19">
 
-<br>Ressort récupérateur
+    <h3>Caractéristiques générales</h3>
+    <ul>
+        <li>Structure en polymère</li>
+        <li>Fiabilité élevée</li>
+        <li>Entretien simple</li>
+    </ul>
 
-<br>Chargeur
+    <ol>
+        <li>Glock 17</li>
+        <li>Glock 19</li>
+    </ol>
 
-<br>Munitions (cartouches : douille, projectile, poudre, amorce)
-<br> <img src="https://www.espfrance.com/img/p/32664-4817-thickbox.jpg" alt=composants glock." width=450>
-  <br><br><h3>Il esxiste une multidude de Glock tous plus étonnant les uns que les autres ! Si vous désirez en savoir plus, je vous invite a cliquer sur le lien suivant pour :<br><br><a href="page2.html"> accéder à la page 2</a> </h3>
- <h3><a href="page3.html">accéder à la page 3</a></h3> 
+    <table>
+        <tr>
+            <th>Modèle</th>
+            <th>Calibre</th>
+        </tr>
+        <tr>
+            <td>Glock 17</td>
+            <td>9×19 mm</td>
+        </tr>
+        <tr>
+            <td>Glock 19</td>
+            <td>9×19 mm</td>
+        </tr>
+    </table>
+
+    <p>
+        <a href="https://share.google/HVTMPw7Kv5uIYBgZ0">Lien vers une vidéo d'un Glock</a>
+    </p>
+
+    <p>
+        Source :
+        <a href="https://fr.wikipedia.org/wiki/Glock" target="_blank">
+            Wikipédia
+        </a>
+    </p>
+</div>
+
+<footer>
+    <p>Sources : Wikipédia, Glock Official</p>
+</footer>
+
 </body>
 </html>
