--- a/page3.html
+++ b/page3.html
@@ -1,1 +1,131 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Glock 17</title>
+    <link rel="stylesheet" href="page3.css">
+</head>
+<body>
+
+<header>
+    <h1>Le Glock 17</h1>
+    <nav>
+        <a href="index.html">Accueil</a>
+        <a href="page2.html">Glock 19</a>
+    </nav>
+</header>
+
+<div class="container">
+
+    <h2>Présentation générale</h2>
+    <p>
+        Le Glock 17 est le tout premier pistolet développé par l’entreprise
+        autrichienne Glock. Il a été conçu au début des années 1980 pour répondre
+        aux besoins de l’armée autrichienne.
+    </p>
+
+    <p>
+        Grâce à sa grande fiabilité, sa simplicité mécanique et son faible coût
+        de production, il est rapidement devenu l’un des pistolets les plus
+        utilisés par les forces de l’ordre dans le monde.
+    </p>
+
+    <h2>Image du Glock 17</h2>
+
+    <a href="https://www.glock.com/fr/pistols/g17" target="_blank">
+        <img src="images/glock17.jpg" alt="Glock 17">
+    </a>
+
+    <h2>Caractéristiques principales</h2>
+
+    <ul>
+        <li>Calibre : 9×19 mm Parabellum</li>
+        <li>Capacité standard : 17 coups</li>
+        <li>Structure en polymère</li>
+        <li>Système Safe Action</li>
+    </ul>
+
+    <h2>Avantages du Glock 17</h2>
+
+    <ol>
+        <li>Grande capacité du chargeur</li>
+        <li>Très robuste et durable</li>
+        <li>Entretien facile</li>
+        <li>Fiabilité reconnue mondialement</li>
+    </ol>
+
+    <h2>Tableau technique</h2>
+
+    <table>
+        <tr>
+            <th>Caractéristique</th>
+            <th>Valeur</th>
+        </tr>
+        <tr>
+            <td>Longueur totale</td>
+            <td>204 mm</td>
+        </tr>
+        <tr>
+            <td>Poids (chargé)</td>
+            <td>905 g</td>
+        </tr>
+        <tr>
+            <td>Capacité</td>
+            <td>17 coups</td>
+        </tr>
+    </table>
+
+    <h2>Comparaison Glock 17 / Glock 19</h2>
+
+    <table>
+        <tr>
+            <th>Modèle</th>
+            <th>Capacité</th>
+            <th>Taille</th>
+        </tr>
+        <tr>
+            <td>Glock 17</td>
+            <td>17 coups</td>
+            <td>Grande</td>
+        </tr>
+        <tr>
+            <td>Glock 19</td>
+            <td>15 coups</td>
+            <td>Compacte</td>
+        </tr>
+    </table>
+
+    <h2>Utilisation</h2>
+
+    <p>
+        Le Glock 17 est principalement utilisé par les forces de l’ordre,
+        les militaires et les services de sécurité dans de nombreux pays.
+        Il est apprécié pour sa précision et sa fiabilité en conditions difficiles.
+    </p>
+
+    <p>
+        Pour en savoir plus sur le Glock 19, vous pouvez consulter
+        <a href="page2.html">la page dédiée au Glock 19</a>.
+    </p>
+
+    <h2>Sources</h2>
+
+    <p>
+        Sources :
+        <a href="https://fr.wikipedia.org/wiki/Glock_17" target="_blank">
+            Wikipédia – Glock 17
+        </a> |
+        <a href="https://www.glock.com" target="_blank">
+            Site officiel Glock
+        </a>
+    </p>
+
+</div>
+
+<footer>
+    <p> Site éducatif par TOURE Ibrahima</p>
+</footer>
+
+</body>
+</html>
 
