--- a/page2.html
+++ b/page2.html
@@ -43,8 +43,8 @@
             </tbody>
         </table>
 
-         <h3><a href="index.html"> Page 1</a>  </h3>
- <h3><a href="page3.html">Page 3</a></h3> 
+         <h3><a href="index.html"> Acceuil</a>  </h3>
+ <h3><a href="page3.html">Glock 17</a></h3> 
     </div>
   
   
