--- a/page3.html
+++ b/page3.html
@@ -30,7 +30,7 @@
         utilisés par les forces de l’ordre dans le monde.
     </p>
 
-    <h2>Image du Glock 17</h2>
+    <h2>Glock 17</h2>
 
     <a href="https://www.glock.com/fr/pistols/g17" target="_blank">
         <img src="images/glock17.jpg" alt="Glock 17">
