--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </p>
 
     <p>
-        <a href="#ancre">Retour en haut de la page (lien ancre)</a>
+        <a href="#ancre">Retour en haut de la page</a>
     </p>
 
     <h2>Sources</h2>
