Replace image source with YouTube link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <h2>Vidéo représentative</h2>
 
-    <img src="https://www.bing.com/ck/a?!&&p=f979fe4da9566730fa95e33cf718f03d08163261b458a5e4600a98697651792cJmltdHM9MTc3MDQyMjQwMA&ptn=3&ver=2&hsh=4&fclid=35628661-62d2-6798-042e-929c63956610&u=a1L3ZpZGVvcy9yaXZlcnZpZXcvcmVsYXRlZHZpZGVvP3E9eW91dHViZStzaG9ydCtnbG9jaysxNyZtaWQ9MkI0QkNGN0ZDNDg4MERCMzVDMjkyQjRCQ0Y3RkM0ODgwREIzNUMyOSZtbXNjbj1zdHZvJkZPUk09VklSRQ" alt="Glock 19">
+    <img src="https://youtube.com/shorts/rZHh5oZLjyc?si=s5sJWBh96w5cbAVc" alt="Glock 19">
 
     <h2>Pourquoi les pistolets Glock ?</h2>
 
