--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <h2>Vidéo représentative</h2>
 
-    <video src="https://youtube.com/shorts/rZHh5oZLjyc?si=s5sJWBh96w5cbAVc" alt="Glock 19"> </video>
+    <video src="https://youtube.com/shorts/rZHh5oZLjyc?si=s5sJWBh96w5cbAVc" alt="Glock 19"> 
 
     <h2>Pourquoi les pistolets Glock ?</h2>
 
