Change title from 'Site sur les Glock' to 'GlockKnowledge'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Site sur les Glock</title>
+    <title>GlockKnowledge</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
