--- a/page2.html
+++ b/page2.html
@@ -1,53 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="page2.css">
-    <title>GlockKnowledge</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Histoire du Glock</title>
+  <link rel="stylesheet" href="page2.css">
+  <style>
+   
+   
+  </style>
 </head>
 <body>
+
+  <header>
+    <h1>Histoire du Glock</h1>
+  </header>
+
+  <nav>
+    <a href="#accueil">Accueil</a>
+    <a href="#histoire">Histoire</a>
+    <a href="#modeles">Modèles</a>
+  </nav>
+
+ 
+
+  <section id="histoire">
+    <h2>Histoire</h2>
     <div class="content">
-        <h2 class="subtitle">GLOCK 19</h2>
-        <h1 class="main-title">BEST SELLER</h1>
-        
-        <p class="description">
-            Le Glock 19 est l'un des pistolets les plus populaires au monde, utilisé par les forces de l'ordre et les civils pour sa fiabilité légendaire.
-        </p>
-
-        <table class="specs-table">
-            <thead>
-                <tr>
-                    <th>Caractéristique</th>
-                    <th>Détails (Gen 5)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Calibre</td>
-                    <td>9 x 19 mm</td>
-                </tr>
-                <tr>
-                    <td>Capacité</td>
-                    <td>15 coups (standard)</td>
-                </tr>
-                <tr>
-                    <td>Poids (chargé)</td>
-                    <td>880 g</td>
-                </tr>
-                <tr>
-                    <td>Longueur totale</td>
-                    <td>185 mm</td>
-                </tr>
-            </tbody>
-        </table>
-
-         <h3><a href="index.html"> Acceuil</a>  </h3>
- <h3><a href="page3.html">Glock 17</a></h3> 
+      <p>
+        Le Glock a été conçu au début des années 1980 par Gaston Glock, un ingénieur autrichien 
+        spécialisé initialement dans les polymères industriels. 
+      </p>
+      <p>
+        En 1982, l’armée autrichienne lança un appel d’offres pour un nouveau pistolet semi-automatique. 
+        Gaston Glock, bien qu’inexpérimenté dans la conception d’armes à feu, proposa un modèle 
+        simple, fiable et fabriqué avec un cadre en polymère : le <strong>Glock 17</strong>.
+      </p>
+      <p>
+        Son succès fut immédiat, et il s’imposa rapidement dans les forces militaires et de police du monde entier.
+      </p>
+      <img src="https://academy.scene7.com/is/image/academy/20390817?$pdp-mobile-gallery-ng$" alt="Glock 17">
+      <p class="small-text">Image : Glock 17 original</p>
     </div>
-  
-  
+  </section>
+
+  <section id="modeles">
+    <h2>Modèles</h2>
+    <div class="content">
+      <p>
+        Depuis le Glock 17, de nombreux modèles ont vu le jour, adaptés à différents usages :
+      </p>
+      <ul>
+        <li>Glock 19 – version compacte, idéale pour le port quotidien.</li>
+        <li>Glock 22 – calibré en .40 S&W, utilisé par de nombreuses forces de police.</li>
+        <li>Glock 43 – modèle subcompact pour le port discret.</li>
+        <li>Glock 18 – version automatique pour les unités spéciales.</li>
+      </ul>
+      <p>
+        Chaque modèle conserve les principes fondamentaux de la marque : 
+        <em>fiabilité, durabilité et simplicité mécanique.</em>
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    Histoire du Glock | Page réalisée à titre éducatif
+  </footer>
 
 </body>
 </html>
