--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <nav>
     <a href="index.html">Accueil</a>
-    <a href="histoire.html">Histoire</a>
-    <a href="modeles.html">Modèles</a>
+    <a href="page2.html">Histoire</a>
+    <a href="page3.html">Modèles</a>
     <a href="QCM_JavaScript.html">Quiz</a>
 </nav>
 
