Update navigation links in page2.html

--- a/page2.html
+++ b/page2.html
@@ -17,9 +17,9 @@
   </header>
 
   <nav>
-    <a href="#accueil">Accueil</a>
-    <a href="#histoire">Histoire</a>
-    <a href="#modeles">Modèles</a>
+    <a href="index.html">Accueil</a>
+    <a href="page2.html">Histoire</a>
+    <a href="page3.html">Modèles</a>
   </nav>
 
  
