Add HTML structure and content for page2

--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,78 @@
   <link rel="stylesheet" href="page2.css">
   <style>
    
+   <!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Histoire du Glock</title>
+  <link rel="stylesheet" href="page2.css">
+  <style>
    
+   
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Histoire du Glock</h1>
+  </header>
+
+  <nav>
+    <a href="index.html">Accueil</a>
+    <a href="page2.html">Histoire</a>
+    <a href="page3.html">Modèles</a>
+  </nav>
+
+ 
+
+  <section id="histoire">
+    <h2>Histoire</h2>
+    <div class="content">
+      <p>
+        Le Glock a été conçu au début des années 1980 par Gaston Glock, un ingénieur autrichien 
+        spécialisé initialement dans les polymères industriels. 
+      </p>
+      <p>
+        En 1982, l’armée autrichienne lança un appel d’offres pour un nouveau pistolet semi-automatique. 
+        Gaston Glock, bien qu’inexpérimenté dans la conception d’armes à feu, proposa un modèle 
+        simple, fiable et fabriqué avec un cadre en polymère : le <strong>Glock 17</strong>.
+      </p>
+      <p>
+        Son succès fut immédiat, et il s’imposa rapidement dans les forces militaires et de police du monde entier.
+      </p>
+      <img src="https://academy.scene7.com/is/image/academy/20390817?$pdp-mobile-gallery-ng$" alt="Glock 17">
+      <p class="small-text">Image : Glock 17 original</p>
+    </div>
+  </section>
+
+  <section id="modeles">
+    <h2>Modèles</h2>
+    <div class="content">
+      <p>
+        Depuis le Glock 17, de nombreux modèles ont vu le jour, adaptés à différents usages :
+      </p>
+      <ul>
+        <li>Glock 19 – version compacte, idéale pour le port quotidien.</li>
+        <li>Glock 22 – calibré en .40 S&W, utilisé par de nombreuses forces de police.</li>
+        <li>Glock 43 – modèle subcompact pour le port discret.</li>
+        <li>Glock 18 – version automatique pour les unités spéciales.</li>
+      </ul>
+      <p>
+        Chaque modèle conserve les principes fondamentaux de la marque : 
+        <em>fiabilité, durabilité et simplicité mécanique.</em>
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    Histoire du Glock | Page réalisée à titre éducatif
+  </footer>
+
+</body>
+</html>
+
   </style>
 </head>
 <body>
