Add link to return to the top of the page

--- a/page2.html
+++ b/page2.html
@@ -130,6 +130,7 @@
         <em>fiabilité, durabilité et simplicité mécanique.</em>
       </p>
     </div>
+    <p><a href="page2.html">Retour en haut de page</a></p>
   </section>
 
   <footer>
