Add back-to-top link in footer of page2.html

--- a/page2.html
+++ b/page2.html
@@ -136,6 +136,7 @@
   <footer>
     Histoire du Glock | Page réalisée à titre éducatif
   </footer>
+  <p><a href="#histoire">Retour en haut de page</a></p>
 
 </body>
 </html>
