--- a/page3.html
+++ b/page3.html
@@ -22,7 +22,8 @@
 <nav>
   <a href="index.html">Acceuil</a>
   <a href="page2.html">Histoire</a>
-    <a href="page3.html">Modèles</a>
+  <a href="page3.html">Modèles</a>
+  <a href="QCM_JavaScript.html">Quiz</a>
     
     
 </nav>
