--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Histoire du Glock</title>
+  <title>GlockKnowledge</title>
   <link rel="stylesheet" href="page2.css">
   <style>
    
