Change page title from 'Modèles' to 'GlockKnowledge'

--- a/page3.html
+++ b/page3.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Modèles</title>
+<title>GlockKnowledge</title>
   <link rel="stylesheet" href="page3.css">
 
 <style>
