Add Quiz link to navigation in page2.html

--- a/page2.html
+++ b/page2.html
@@ -26,6 +26,7 @@
     <a href="index.html">Accueil</a>
     <a href="page2.html">Histoire</a>
     <a href="page3.html">Modèles</a>
+    <a href="QCM_JavaScript.js">Quiz</a>
     
   </nav>
 
