--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a href="index.html">Accueil</a>
     <a href="page2.html">Histoire</a>
     <a href="page3.html">Modèles</a>
-    <a href="QCM_JavaScript.js">Quiz</a>
+    <a href="QCM_JavaScript.html">Quiz</a>
     
 </nav>
 
