Update Quiz link to point to QCM_JavaScript.html

--- a/page3.html
+++ b/page3.html
@@ -23,7 +23,7 @@
   <a href="index.html">Acceuil</a>
   <a href="page2.html">Histoire</a>
   <a href="page3.html">Modèles</a>
-<a href="QCM_JavaScript.js">Quiz</a>    
+<a href="QCM_JavaScript.html">Quiz</a>    
     
 </nav>
 
